--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -116,6 +116,7 @@ timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "tim
 # Paging
 paging-common-ktx = { module = "androidx.paging:paging-common-ktx", version.ref = "pagingCommonKtx" }
 paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
+paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingCompose" }
 
 # coil
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
